--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.js"></script>
-    <title></title>
+    <title>Hello</title>
   </head>
   <body>
     <div class="container">
